Fix too big card

--- a/src/assets/styles/components/_container.scss
+++ b/src/assets/styles/components/_container.scss
@@ -21,7 +21,7 @@
     &_grid {
         display: grid !important;
         gap: 2rem;
-        grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(190px, 300px));
         width: 100%;
     }
 }
